--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     "require": {
         "php": "^8.1",
         "firebase/php-jwt": "^5.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/support": "^6.0"
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
